--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@supabase/supabase-js": "^2.86.0",
     "date-fns": "^4.1.0",
     "next": "16.0.6",
+    "next-auth": "^5.0.0-beta.30",
     "postcss": "^8.5.6",
     "react": "19.2.0",
+    "react-day-picker": "^9.12.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
